[package]
name = "sync-vs-threads-vs-async-rust-bench"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "main"
path = "main.rs"

[dependencies]
ureq = "2.4.0"
tokio = { version = "1.19.2", features = ["full"], optional = true }
hyper = { version = "0.14.19", features = ["http1", "client", "tcp"], optional = true }

[features]
threads = []
async = ["dep:tokio", "dep:hyper"]
